# RikaiRebuilt

./: .gitignore  .web-extension-id  CHANGELOG.md  ISSUES.md  README.md  build.mjs  manifest-chrome.json  manifest-firefox-v3.json  manifest-firefox.json  manifest.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: publish.yaml
changeLogs/: 1.0.26.md  1.1.0.md  1.1.1.md  1.1.2.md  1.1.3.md  1.1.5.md  1.1.6.md  1.1.7.md  1.2.0.md  1.3.0.md
epwing/: CMakeLists.txt  README.md  install-linux.sh  install-osx.sh  install-windows.bat
epwing/libraries/eb/lib/: eb.lib
epwing/libraries/postsrc/include/: build-post.h  config.h  config.h.in  dirent.c  dirent.h  eb.def  eb.rc  eb.rc.in  ebutils.h  localedir.c  netdb.h  unistd.h
epwing/libraries/postsrc/include/eb/: sysdefs.h  sysdefs.h.in
epwing/libraries/zlib/lib/: zlib.lib
epwing/linux/: eplkup  readme_linux.txt
epwing/manifest/: manifest-unix.dist.json  manifest-windows-chrome.json  manifest-windows.json  register.reg
epwing/osx/: eplkup  readme_osx.txt
epwing/src/: Makefile  base64.c  base64.h  easyJSON.c  easyJSON.h  eplkup.c  eplkup.sln  eplkup.vcxproj  eplkup.vcxproj.filters  eplkup_data.c  eplkup_data.h  eplkup_font.c  eplkup_font.h  eplkup_gaiji.c  eplkup_gaiji.h  eplkup_hook_handler.c  eplkup_hook_handler.h  eplkup_utils.c  eplkup_utils.h  gaiji_table_chujiten.c  gaiji_table_daijirin.c  gaiji_table_daijisen.c  gaiji_table_genius.c  gaiji_table_kojien.c  gaiji_table_meikyojj.c  gaiji_table_meikyou.c  gaiji_table_snmkg99.c  gaiji_table_wadai5.c
epwing/src/NativeMessaging/: NativeMessaging.c  NativeMessaging.h
epwing/windows/: readme_windows.txt  run_eplkup.sh
lib/: autobind.js
native-messaging-test/: check_config_win.py  manifest.json
native-messaging-test/resources/: register.reg
native-messaging-test/src/: background.js
offscreen-audio/: index.html
options/: options.html
resources/: kanji.html
resources/dictionaries/: csvToJson.php
resources/kanji_files/: load.css  load.js  load_002.js
src/: AnkiImport.ts  AudioPlayer.ts  DictionaryLookup.ts  FileReader.js  FileReader.ts  FrequencyDb.js  OffscreenAudio.ts  Themes.ts  Utils.ts  ankiImport.js  audioPlayer.js  auto-bind.js  background.js  background.ts  config.js  data.js  data.ts  defaultConfig.js  defaultConfig.ts  deinflect.js  deinflect.ts  deinflectText.js  dictionary.js  index.js  initializers.ts  removeFromArray.js  utils.js
src/content/: document.d.ts  document.js  entryTransformers.ts  index.js  index.ts  source.d.ts  source.js
src/database/: FrequencyDb.js  FrequencyDb.ts  IndexedDictionary.js  IndexedDictionary.ts  NameDictionary.ts  PitchDb.js  PitchDb.ts  RikaiDatabase.js  RikaiDatabase.ts
src/interfaces/: AnkiFields.ts  DictionaryDefinition.ts  SearchResults.ts
src/options/: options.css  options.html  options.js
src/types/: MessagesToBackground.ts
src/vn-hook/: clipboardCheck.ts  index.ts  (+1 more)
styles/: modal.css  popup-blue.css  popup-blue.css.map  popup-blue.scss  popup.css  popup.css.map  popup.scss
test/: testData.js  testDefinflect.js  testFileReader.js  testRemoveFromArray.js
vn-hook/: index.html  options.css
(+3 files in other folders)
